// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test render function 'renderContent' should correctly render passed items. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body />,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test render function 'renderContent' should return 'Cannot render content.' when called with empty array of items. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body />,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test render function 'renderContent' should return 'Cannot render content.' when called with items undefined. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        Cannot render content.
      </div>
    </div>
    <div>
      <div>
        Cannot render content.
      </div>
    </div>
    <div>
      <div
        class="MuiBox-root MuiBox-root-8"
      >
        <span
          class="MuiTypography-root makeStyles-common-1 makeStyles-title-4 MuiTypography-body1"
        >
          <div>
            <p>
              Test line
            </p>
          </div>
        </span>
      </div>
      <div
        class="MuiBox-root MuiBox-root-9"
      >
        <span
          class="MuiTypography-root makeStyles-common-1 makeStyles-subTitle-5 MuiTypography-body1"
        >
          <div>
            <p>
              Test line
            </p>
          </div>
        </span>
      </div>
      <div
        class="MuiPaper-root MuiCard-root makeStyles-card-10 MuiPaper-elevation3 MuiPaper-rounded"
      >
        <img
          alt="image"
          class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img"
          src="http://localhost:5000/api/v1image.jpg"
        />
      </div>
      <span
        class="MuiTypography-root makeStyles-common-1 makeStyles-paragraph-7 MuiTypography-body1"
      >
        <div>
          <p
            class="custom-drop-cap"
          >
            Test line
          </p>
        </div>
      </span>
      <span
        class="MuiTypography-root makeStyles-common-1 makeStyles-paragraph-7 MuiTypography-body1"
      >
        <div>
          <p>
            Test line
          </p>
        </div>
      </span>
      <div
        class="makeStyles-separator-13"
      >
        <span
          class="makeStyles-span-14"
        />
        <span
          class="makeStyles-span-14"
        />
        <span
          class="makeStyles-span-14"
        />
      </div>
      <div
        class="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <table
          aria-label="table"
          class="MuiTable-root makeStyles-table-15"
        >
          <thead
            class="MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head WithStyles(ForwardRef(TableCell))-head-18"
                scope="col"
              />
              <th
                class="MuiTableCell-root MuiTableCell-head WithStyles(ForwardRef(TableCell))-head-18"
                scope="col"
              >
                Header line
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head WithStyles(ForwardRef(TableCell))-head-18"
                scope="col"
              >
                Header line
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-20"
            >
              <th
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-header-16"
                role="cell"
                scope="row"
              >
                1
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-row-17"
                role="cell"
                scope="row"
              >
                value
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-row-17"
                role="cell"
                scope="row"
              >
                value
              </td>
            </tr>
            <tr
              class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-20"
            >
              <th
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-header-16"
                role="cell"
                scope="row"
              >
                2
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-row-17"
                role="cell"
                scope="row"
              >
                value
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-row-17"
                role="cell"
                scope="row"
              >
                value
              </td>
            </tr>
            <tr
              class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-20"
            >
              <th
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-header-16"
                role="cell"
                scope="row"
              >
                3
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-row-17"
                role="cell"
                scope="row"
              >
                value
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-row-17"
                role="cell"
                scope="row"
              >
                value
              </td>
            </tr>
            <tr
              class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-20"
            >
              <th
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-header-16"
                role="cell"
                scope="row"
              >
                4
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-row-17"
                role="cell"
                scope="row"
              >
                value
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body WithStyles(ForwardRef(TableCell))-body-19 makeStyles-row-17"
                role="cell"
                scope="row"
              >
                value
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="MuiPaper-root MuiCard-root makeStyles-card-21 MuiPaper-elevation3 MuiPaper-rounded"
      >
        <img
          class="MuiCardMedia-root makeStyles-image-22 MuiCardMedia-media MuiCardMedia-img"
          src="http://localhost:5000/api/v1cheers-commercial.png"
        />
        <div
          class="MuiCardContent-root"
        >
          <span
            class="MuiTypography-root makeStyles-text-23 MuiTypography-body1"
          >
            <div>
              Video
            </div>
          </span>
        </div>
      </div>
      <div>
        Unknown element.
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      Cannot render content.
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
